--- a/plugins/rainlab/translate/updates/version.yaml
+++ b/plugins/rainlab/translate/updates/version.yaml
@@ -43,3 +43,8 @@
     - seed_all_tables.php
 1.3.2: Improved compatibility with RainLab.Pages, added ability to scan Mail Messages for translatable variables.
 1.3.3: Fix to the locale picker session handling in Build 420 onwards.
+1.3.4: Add alternate hreflang elements and adds prefixDefaultLocale setting.
+1.3.5: Fix MLRepeater bug when switching locales.
+1.3.6: Fix Middleware to use the prefixDefaultLocale setting introduced in 1.3.4
+1.3.7: Fix config reference in LocaleMiddleware
+1.3.8: Keep query string when switching locales
